--- a/index.html
+++ b/index.html
@@ -1,13 +1,42 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Simple Parallax Example</title>
+
 </head>
 <body>
-    <h1>Bonjour github !</h1>
-    <p>test</p>
-    <p> mise a jour 10/02/2025</p>
+
+    <header class="header">
+        <a href="#" class="logo"> <img src="/img/logo-riot.png" alt=""></a>
+         <nav class="navbar">     
+                <a href="#">Présentation</a>
+                <a href="#">Médias</a>
+                <a href="#">Actualités</a>
+                <a href="#">Classement</a>
+                <a href="#">Support</a>
+                <a href="#">Social</a>
+                <a href="#">Plus</a>
+         </nav>
+    </header>
+
+
+    <div class="parallax">
+        <img src="/img/Sova.png" alt="Image Parallax" class="parallax-img">
+    </div>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/simple-parallax-js/5.6.2/simpleParallax.min.js"></script>
+    <script>
+        // Initialiser SimpleParallax
+        const image = document.getElementsByClassName('parallax-img');
+        new simpleParallax(image, {
+            scale: 1.5,           // Niveau de zoom
+            delay: .6,            // Délai de l'animation  // Type de transition
+            orientation:'right',
+            overflow: true        // Permet le débordement de l'image
+        });
+    </script>
 </body>
 </html>
