--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <div class="atropos-scale">
                     <div class="atropos-rotate">
                         <div class="atropos-inner" id="sova">
-                            <img class="glitch" src="img/carte-sova.png" alt="">
+                            <img class="glitch" src="img/carte-sova.svg" alt="">
                             <div class="card-content">
                                 <div class="floating-element element-1" data-atropos-offset="5"></div>
                                 <div class="floating-element element-2" data-atropos-offset="3"></div>
