--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="logovalo"> <img src="/img/logovalorant.png" alt=""></div>
 
         <div class="sova">
-            <a href="https://recxas.github.io/parallax3web/sova.html">
+            <a href="./sova.html">
             <div class="atropos my-atropos">
                 <div class="atropos-scale">
                     <div class="atropos-rotate">
