--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 <div class="atropos-scale">
                     <div class="atropos-rotate">
                         <div class="atropos-inner" id="gekko">
-                            <img class="glitch" src="/img/gekko.png" alt="">
+                            <img class="glitch" src="img/gekko.png" alt="">
                             <div class="card-content">
                                 <div class="floating-element element-1" data-atropos-offset="5"></div>
                                 <div class="floating-element element-2" data-atropos-offset="3"></div>
