--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <div class="parent">
 
         <div class="titre"> <h1>Agents</h1> </div>
-        <div class="logovalo"> <img src="/img/logovalorant.png" alt=""></div>
+        <div class="logovalo"> <img src="./img/logovalorant.png" alt=""></div>
 
         <div class="sova">
             <a href="./sova.html">
@@ -24,7 +24,7 @@
                 <div class="atropos-scale">
                     <div class="atropos-rotate">
                         <div class="atropos-inner" id="sova">
-                            <img class="glitch" src="img/carte-sova.png" alt="">
+                            <img class="glitch" src="./img/carte-sova.png" alt="">
                             <div class="card-content">
                                 <div class="floating-element element-1" data-atropos-offset="5"></div>
                                 <div class="floating-element element-2" data-atropos-offset="3"></div>
@@ -40,7 +40,7 @@
                 <div class="atropos-scale">
                     <div class="atropos-rotate">
                         <div class="atropos-inner" id="reyna">
-                            <img class="glitch" src="/img/Reyna.png" alt="">
+                            <img class="glitch" src="./img/Reyna.png" alt="">
                             <div class="card-content">
                                 <div class="floating-element element-1" data-atropos-offset="5"></div>
                                 <div class="floating-element element-2" data-atropos-offset="3"></div>
@@ -55,7 +55,7 @@
                 <div class="atropos-scale">
                     <div class="atropos-rotate">
                         <div class="atropos-inner" id="sage">
-                            <img class="glitch" src="/img/Sage.png" alt="">
+                            <img class="glitch" src="./img/Sage.png" alt="">
                             <div class="card-content">
                                 <div class="floating-element element-1" data-atropos-offset="5"></div>
                                 <div class="floating-element element-2" data-atropos-offset="3"></div>
@@ -85,7 +85,7 @@
                 <div class="atropos-scale">
                     <div class="atropos-rotate">
                         <div class="atropos-inner" id="omen">
-                            <img class="glitch" src="/img/Omen.png" alt="">
+                            <img class="glitch" src="./img/Omen.png" alt="">
                             <div class="card-content">
                                 <div class="floating-element element-1" data-atropos-offset="5"></div>
                                 <div class="floating-element element-2" data-atropos-offset="3"></div>
@@ -101,11 +101,11 @@
 
             <ul class="nav-links">
                 <div class="logosite">
-                    <a href=""><img class="Riotblanc" src="/img/logo-riot.png" alt=""></a>
-                    <a href=""><img class="Riotrouge" src="/LogoRiot/FullLockup/002_RG_2021_FULL_LOCKUP_RED.png" alt=""></a>
+                    <a href=""><img class="Riotblanc" src="./img/logo-riot.png" alt=""></a>
+                    <a href=""><img class="Riotrouge" src="./LogoRiot/FullLockup/002_RG_2021_FULL_LOCKUP_RED.png" alt=""></a>
                 </div>
                 <div class="">
-                    <img src="/img/logovalorantb.png" alt="" class="logob">
+                    <img src="./img/logovalorantb.png" alt="" class="logob">
                 </div>                
                 <li><a href="#home">Présentation</a></li>
                 <li><a href="#services">Médias</a></li>
