--- a/sova.html
+++ b/sova.html
@@ -44,7 +44,7 @@
                 <div class="list">
                     <div class="item" style="--position: 1"><img id="sova_typo" src="./img/sova_typo.png" alt=""></div>
                     <div class="item" style="--position: 2"><img id="initiator" src="./img/initiator.png" alt=""></div>
-                    <div class="item" style="--position: 3"><img id="INITIATEUR" src="/img/INITIATEUR.png" alt=""></div>
+                    <div class="item" style="--position: 3"><img id="INITIATEUR" src="./img/INITIATEUR.png" alt=""></div>
                     <div class="item" style="--position: 4"><img id="initiator" src="./img/initiator.png" alt=""></div>
     
                 </div>
