--- a/sova.html
+++ b/sova.html
@@ -87,7 +87,7 @@
             <div class="container">
                 <div class="video-container">
                     <div class="overlay"></div>
-                    <img src="./img/imgultsova.png" alt="Image de couverture" class="cover-image">
+                    <img src="./img/spell1-sova.png" alt="Image de couverture" class="cover-image">
                     <video id="myVideo1" class="video" muted loop>
                         <source src="https://cmsassets.rgpub.io/sanity/files/dsfx7636/game_data/7776fa677e90c72da94ec7d188d2d4618116c41b.mp4" type="video/mp4">
                         Votre navigateur ne prend pas en charge la vidéo.
@@ -105,9 +105,9 @@
             <div class="container">
                 <div class="video-container">
                     <div class="overlay"></div>
-                    <img src="./img/imgultsova.png" alt="Image de couverture" class="cover-image">
+                    <img src="./img/spell2-sova.png" alt="Image de couverture" class="cover-image">
                     <video id="myVideo2" class="video" muted loop>
-                        <source src="https://cmsassets.rgpub.io/sanity/files/dsfx7636/game_data/7776fa677e90c72da94ec7d188d2d4618116c41b.mp4" type="video/mp4">
+                        <source src="https://cmsassets.rgpub.io/sanity/files/dsfx7636/game_data/50f9d870fa2a9b9ba38408eb718ffc06879c11a8.mp4" type="video/mp4">
                         Votre navigateur ne prend pas en charge la vidéo.
                     </video>
                 </div>
@@ -123,9 +123,9 @@
             <div class="container">
                 <div class="video-container">
                     <div class="overlay"></div>
-                    <img src="./img/imgultsova.png" alt="Image de couverture" class="cover-image">
+                    <img src="./img/spell3-sova.png" alt="Image de couverture" class="cover-image">
                     <video id="myVideo3" class="video" muted loop>
-                        <source src="https://cmsassets.rgpub.io/sanity/files/dsfx7636/game_data/7776fa677e90c72da94ec7d188d2d4618116c41b.mp4" type="video/mp4">
+                        <source src="https://cmsassets.rgpub.io/sanity/files/dsfx7636/game_data/6c6f036376c18ddf4ed0c589b506b8889d86a29a.mp4" type="video/mp4">
                         Votre navigateur ne prend pas en charge la vidéo.
                     </video>
                 </div>
@@ -143,7 +143,7 @@
                     <div class="overlay"></div>
                     <img src="./img/imgultsova.png" alt="Image de couverture" class="cover-image">
                     <video id="myVideo4" class="video" muted loop>
-                        <source src="https://cmsassets.rgpub.io/sanity/files/dsfx7636/game_data/7776fa677e90c72da94ec7d188d2d4618116c41b.mp4" type="video/mp4">
+                        <source src="https://cmsassets.rgpub.io/sanity/files/dsfx7636/game_data/df9ce34c3d2a7f527929cac123501e1473e0da0e.mp4" type="video/mp4">
                         Votre navigateur ne prend pas en charge la vidéo.
                     </video>
                 </div>
